--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,14 +1,14 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 3em auto;
   padding: 2rem;
   text-align: center;
   background-color: var(--color-light);
 }
-
 .app-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 550px;
+  gap: 5em;
 }
