--- a/frontend/src/components/guessing/Guessing.css
+++ b/frontend/src/components/guessing/Guessing.css
@@ -11,10 +11,39 @@
     font-family: var(--font-title);
     font-size: 3em;
     width: 100%;
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-decoration-color: transparent;
+    transition: text-decoration-color 0.3s ease-in;
+}
+
+.word:hover {
+    cursor: pointer;
+    text-decoration-color: var(--color-dark);
 }
 
 .button-group {
     display: flex;
     justify-content: space-evenly;
     width: 100%;
+}
+
+.next-button-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.next-button {
+    cursor: pointer;
+    border-radius: 100%;
+    border: 2px solid transparent;
+    background-color: var(--color-light);
+    padding: 0.75em;
+    transition: background-color 0.3s, color 0.1s;
+}
+
+.next-button:hover {
+    background-color: var(--color-accent);
+    color: var(--color-light);
 }
